--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "jest": "^29.2.0",
+    "jest-environment-jsdom": "^29.2.0",
     "postcss": "^8.4.16",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8"
